tools/Deploy/Kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: health-api-service
spec:
  selector:
    app: health-api
  ports:
    - protocol: TCP
      port: 80
  # type: LoadBalancer
