tools/Deploy/Kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: health-ingress
spec:
  backend:
    serviceName: health-api-service
    servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: health-ingress-service
spec:
  selector:
    app: health-ingress
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
